tests/errors/err06_falta_semicolon.ml
// Error 06: Falta punto y coma
a = 5
b = 3;
print(a);
